--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lazy-cookie",
   "version": "1.0.0",
   "description": "Tiny JavaScript library that makes working with cookies on client side less of a pain",
-  "main": "./dist/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -w",
