--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "lazy-cookie",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Tiny JavaScript library that makes working with cookies on client side less of a pain",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -w",
-    "start": "node dist/index.js"
+    "start": "node lib/index.js"
   },
   "repository": {
     "type": "git",
